--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <span>Demo V0.0</span>
     </footer>
 
-    <script src="assets/js/data.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/data.js?v=3"></script>
+    <script src="assets/js/main.js?v=3"></script>
 </body>
 </html>
 
